# IPEPS

./: README.md  pyproject.toml
examples/: __init__.py  benchmark.py  honeycomb_spin_phonon.py  mpi_parallel.py
src/ipeps/: __init__.py
src/ipeps/algorithms/: __init__.py  ctmrg.py  full_update.py  simple_update.py  variational.py
src/ipeps/core/: __init__.py  contractions.py  decompositions.py  ipeps_state.py  tensor.py
src/ipeps/hpc/: __init__.py  checkpointing.py  gpu.py  mpi.py  profiling.py
src/ipeps/lattice/: __init__.py  honeycomb.py  unit_cell.py
src/ipeps/models/: __init__.py  operators.py  spin_boson.py
tests/: __init__.py  test_algorithms.py  test_core.py  test_lattice.py  test_models.py
