[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipeps-honeycomb"
version = "1.0.0"
description = "State-of-the-art HPC-level iPEPS implementation for 2D honeycomb lattice with spin-boson coupling"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "iPEPS Research Team", email = "ipeps@research.org"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "opt-einsum>=3.3.0",
    "h5py>=3.9.0",
    "mpi4py>=3.1.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
gpu = [
    "cupy>=12.0.0",
    "torch>=2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-mpi>=0.6",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.0.290",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
ipeps-run = "ipeps.cli:main"
ipeps-analyze = "ipeps.analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
